tests/typing/good/testfile-bounds-10.scala

class C[+T] { def foo[A>:C[C[Boolean]]](a: C[Nothing]) : A = a }
object Main { def main(args: Array[String]) { } }
