tests/typing/bad/testfile-lt2-1.scala
class A { def m() { var b: Boolean = 1 > true } }
object Main { def main(args: Array[String]) { } }
